--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -8,7 +8,7 @@ Dafür wurden die Precursoren im Einzelnen per Molekulardynamik simuliert und an
 
 \subsection{Precursor-Oberflächen-Reaktionen}
 
-\begin{figure}[hp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
   \begin{subfigure}[t]{\subfigwidth}
