--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -1,7 +1,7 @@
 \section{Kupfer-PVD}
 \label{copperpvd}
 
-\begin{table}[hbtp]
+\begin{table}
   \caption[EAM-Parametrisierungen für Kupfersysteme]{EAM-Parametrisierungen für Kupfersysteme.}
   \label{tab:copperpots}
   \rowcolors{0}{white}{lightgray}
@@ -31,7 +31,7 @@ Es zeigten sich Probleme beim Laden der Dateien, kryptische Fehlerausgaben nach 
 Die Ergebnisse der verbliebenen Simulationen zeigen aber gute Übereinstimmung mit Literaturwerten (Tabelle \ref{tab:copperpreresults}).
 Einzig der Schmelzpunkt wird stark überschätzt (Abbildung \ref{fig:copperthermo}), was durch üblicherweise geringe Simulationstemperaturen vernachlässigbar ist.
 
-\begin{table}[bht]
+\begin{table}
   \rowcolors{0}{white}{lightgray} 
   \caption[Eigenschaften von Kupfer]{Voruntersuchungen: Vergleich der Simulationsergebnisse mit Literaturdaten}
   \label{tab:copperpreresults}
@@ -46,7 +46,7 @@ Einzig der Schmelzpunkt wird stark überschätzt (Abbildung \ref{fig:coppertherm
   \end{tabularx}
 \end{table}
 
-\begin{figure}[hp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
@@ -68,7 +68,7 @@ Einzig der Schmelzpunkt wird stark überschätzt (Abbildung \ref{fig:coppertherm
 \subsection{Prozess-Simulation}
 \label{coppersimulation}
 
-\begin{figure}[hp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
   \begin{subfigure}[t]{\subfigwidth}
@@ -113,7 +113,7 @@ Mit einem nahezu konstanten RMS-Wert um \SI{1}{\angstrom} sind die gewachsenen S
 Die Cu\_u3.eam-Simulation bildet ab Schritt 70 einen \SI{2.6}{\nano\meter} breiten und \SI{3.0}{\nano\meter} tiefen \todo{Krater?}Krater aus, der schließlich zu einem \SI{1}{\nano\meter} großen \todo{void}Einschluss abgeschlossen wird (Abbildung \ref{fig:coppercrater}).
 Die Auswirkungen dieses Kraters sind auch im RMS-Diagramm (Abbildung \ref{fig:copperparsivald-c}, schlagartige Abnahme in Schritt 96) und in den Abbruchraten (Abbildung \ref{fig:copperparsivald-a}, Anstieg zwischen Schritten 60 und 90) erkennbar, beeinflussen aber nicht die Wachstumsrate (Abbildung \ref{fig:copperparsivald-b}).
 
-\begin{figure}[bthp]
+\begin{figure}
 
   \captionsetup[subfigure]{justification=centering,singlelinecheck=false}
   \def\subfigwidth{0.32\textwidth}
