--- a/md.tex
+++ b/md.tex
@@ -88,7 +88,7 @@ Der Druck wird dabei über die Virialgleichung \todo{für ideale Gase?} ermittel
 
 \subsubsection{Minimierung durch Konjugierte Gradienten (CG-Minimierung)}
 
-\begin{figure}[!b]
+\begin{figure}
   \centering
   \def\svgwidth{0.5\textwidth}
   \input{img/cg-gradient.pdf_tex}
