--- a/mdtests.tex
+++ b/mdtests.tex
@@ -10,7 +10,7 @@ Dem Thema der Arbeit entsprechend, sollen die zu untersuchenden Systeme struktur
 So wird die kristalline und amorphe Struktur, ihre Dichte, radiale Verteilungsfunktion, Bindungslängen und Koordination einerseits untersucht, und die Darstellbarkeit der zugrunde liegenden Reaktionen per ReaxFF-Formulierung sowie die Diffusion eines Atomes auf der Oberfläche andererseits.
 Diese Tests sind in Tabelle \ref{tab:mdtestvariants} dargestellt.
 
-\begin{table}[bhtp]
+\begin{table}
   \rowcolors{0}{white}{lightgray}
   \begin{tabularx}{\textwidth}{|lXX|}
     \hline
