--- a/multilayer.tex
+++ b/multilayer.tex
@@ -14,7 +14,7 @@ Für das Cu/Ni-System werden \todo{Aus welchem Hut wurde das gezaubert?}partiell
 
 \subsection{Ergebnisse}
 
-\begin{figure}[H]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
@@ -39,7 +39,7 @@ Die in Abbildung \ref{fig:multilayerresults} vorgestellten Ergebnisse zeigen erf
 Die Atome der verschiedenen Lagen setzen das fcc-Kristallgitter der vorherigen Lage fort, was durch die Ähnlichkeit der fcc-Gitterkonstanten zu erklären ist (\SI{3.52}{\angstrom} für Nickel, \SI{3.61}{\angstrom} für Kupfer, entspricht \SI{2.5}{\percent} Abweichung).
 Bei größeren Systemen sind durch Verspannungen im Material Gitterversetzungen und -fehlstellen zu erwarten, die allerdings durch \todo{Wort}Finite-Size-Effekte unterdrückt sein können.
 
-\begin{figure}[hp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
@@ -57,7 +57,7 @@ Bei größeren Systemen sind durch Verspannungen im Material Gitterversetzungen 
   \label{fig:multilayerresults}
 \end{figure}
 
-\begin{figure}[hp]
+\begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
   \begin{subfigure}[t]{8cm}
     \includegraphics[width=\textwidth]{CuNi_surface8_noalpha}
