--- a/packages.tex
+++ b/packages.tex
@@ -9,6 +9,7 @@
 \usepackage{colortbl}
 \usepackage{scrpage2}
 \usepackage{tabularx}
+\usepackage{threeparttable}
 \usepackage[table]{xcolor}
 \usepackage{booktabs}
 \usepackage{ngerman}
@@ -55,6 +56,6 @@
         stretch=10,
         shrink=10
 ]{microtype}
-\usepackage[range-phrase={\,bis\,}]{siunitx}
+\usepackage[range-phrase={\,bis\,},binary-units]{siunitx}
 
 \usepackage{mhchem}
