--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -10,7 +10,7 @@ Für die folgenden Simulationen werden ReaxFF-Potentiale mit der Aussicht genutz
 Da die ReaxFF-Formulierung erst innerhalb des letzten Jahrzehntes an Popularität gewonnen hat\todo{ref auf van duin}, sind die verfügbaren Potentiale auf einzelne Probleme angepasst und oftmals noch nicht in den Potentialdatenbanken zu finden.
 Tabelle \ref{tab:siliconpotentials} listet die im Rahmen der Arbeit untersuchten ReaxFF-Parametrisierungen auf.
 
-\begin{table}[h]
+\begin{table}
   \caption[Silizium-Potentialdateien]{Potentialdateien für Silizium- und Siliziumoxidsysteme}
   \label{tab:siliconpotentials}
   \rowcolors{0}{white}{lightgray}
@@ -40,7 +40,7 @@ Das Ziel dieser Bemühungen ist eine Abschätzung der Darstellbarkeit des Prozes
 Sind neben den Bulks auch die die Precursormoleküle und Oberflächen sowie deren Reaktionen miteinander mit hoher Zuverlässigkeit darstellbar, ließe sich der Prozess ohne grobe Vereinfachung der Precursorchemie simulieren.
 Die Ergebnisse dieser Betrachtungen wurden in Tabelle \ref{tab:siliconpreresults} zusammen gefasst und für ausgewählte Systeme in Tabelle \ref{tab:silicondetailedresults} näher analysiert.
 
-\begin{table}[h]
+\begin{table}
   \caption[Ergebnisse der Silizium-Potential-Untersuchungen]{Zusammenfassung Ergebnisse der Untersuchung der Potenialuntersuchung für Silizium-Systeme.
     Detailliertere Ergebnisse finden sich im \todo[inline]{Anhang}
   }
